src/test/resources/Parser/SyntaxErrors/TwiceDefinedLocalVariable.front
class A:
    test(A[] i) {
        int32 i := 0;
    }